compiler/tests/fixtures/compile_errors/binary_operations/pow_int.fe
contract Foo:
    pub def foo(a: u256, b: i256):
        a << b